--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 body {
-  width: 640px;
   margin: 0 auto;
+  background-color: #01050c;
 }
 
 ul, li, p, h1, h2, h3, figure {
@@ -13,13 +13,39 @@ figure {
 }
 
 .login_wrap {
-  background: url("./../imgs/bg.png");
-  background-repeat: no-repeat;
+  width: 640px;
   height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.login_wrap video {
+  position: relative;
+  height: 100vh;
+  width: auto;
+  transform: translateX(-33%);
+}
+.login_wrap > figure {
+  max-width: 640px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+.login_wrap > figure img {
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
 }
 .login_wrap .login_con1_wrap {
-  height: 100%;
+  max-width: 640px;
+  margin: 0 auto;
+  height: 100vh;
   position: relative;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 .login_wrap .login_con1_wrap .con1 {
   height: 100%;
@@ -30,28 +56,41 @@ figure {
 .login_wrap .login_con1_wrap .con1 figure {
   text-align: center;
   position: relative;
-  bottom: 12%;
+  bottom: 5%;
 }
 .login_wrap .login_con1_wrap .con1 figure img {
   width: 80%;
 }
 .login_wrap .login_con1_wrap .con1_txt {
   position: absolute;
-  bottom: 0;
-  left: 20px;
-  cursor: pointer;
+  bottom: 30px;
+  width: 100%;
 }
-.login_wrap .login_con1_wrap .con1_txt figure {
+.login_wrap .login_con1_wrap .con1_txt > figure:nth-of-type(1) {
   text-align: center;
+  position: relative;
 }
-.login_wrap .login_con1_wrap .con1_txt figure img {
-  width: 85%;
+.login_wrap .login_con1_wrap .con1_txt > figure:nth-of-type(1) img {
+  width: 95%;
+}
+.login_wrap .login_con1_wrap .con1_txt > figure:nth-of-type(2) {
+  position: absolute;
+  top: 75%;
+  cursor: pointer;
+  right: 13%;
+  animation: 0.5s arrow linear 0s infinite alternate;
+  margin-top: 0;
+}
+@keyframes arrow {
+  100% {
+    margin-top: 5px;
+  }
 }
 .login_wrap .login_con1_wrap .con1_txt p {
+  color: #fff;
+  font-size: 22px;
   position: absolute;
-  top: 90px;
-  left: 100px;
+  top: 32%;
+  left: 12%;
+  text-shadow: 2px 2px 0px #346df8;
 }
-.login_wrap .login_con2_wrap {
-  display: none;
-}/*# sourceMappingURL=login.css.map */
