--- a/css/login.scss
+++ b/css/login.scss
@@ -1,15 +1,42 @@
-body{width:640px; margin:0 auto;}
+body{margin:0 auto;background-color: #01050c;}
 ul,li,p,h1,h2,h3,figure{margin:0; padding:0;}
 figure{font-size: 0;}
 
 
 .login_wrap{
-  background: url("./../imgs/bg.png");
-  background-repeat: no-repeat;
+  width: 640px;
   height: 100vh;
-  .login_con1_wrap{
-    height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  video{
     position: relative;
+    height: 100vh;
+    width: auto;
+    transform: translateX(-33%);
+  }
+  >figure{
+    max-width: 640px;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    img{
+      width: 100%;
+      height: 100%;
+      opacity: 0.7;
+    }
+  }
+  .login_con1_wrap{
+    max-width: 640px;
+    margin: 0 auto;
+    height: 100vh;
+    position: relative;
+    position: absolute;
+    top: 0;
+    // left: 0;
+    width: 100%;
     .con1{
       height: 100%;
       display: flex;
@@ -18,7 +45,7 @@ figure{font-size: 0;}
       figure{
         text-align: center;
         position: relative;
-        bottom:12%;
+        bottom:5%;
         img{
           width:80%;
         }
@@ -26,23 +53,39 @@ figure{font-size: 0;}
     }
     .con1_txt{
       position: absolute;
-      bottom: 0;
-      left: 20px;
-      cursor: pointer;
-      figure{
-        text-align: center;
-        img{
-          width:85%;
+      bottom: 30px;
+      width: 100%;
+      >figure{
+        &:nth-of-type(1){
+          text-align: center;
+          position: relative;
+          img{
+            width:95%;
+          }
+        }
+        &:nth-of-type(2){
+          position: absolute;
+          top: 75%;
+          cursor: pointer;
+          right: 13%;
+          animation: .5s arrow linear 0s infinite alternate; 
+          margin-top: 0;
+          @keyframes arrow{
+            100%{margin-top: 5px;}
+          }
         }
       }
       p{
+        color:#fff;
+        font-size: 22px;
         position: absolute;
-        top: 90px;
-        left: 100px
+        top: 32%;
+        left: 12%;
+        text-shadow:2px 2px 0px #346df8;
       }
     }
   }
-  .login_con2_wrap{
-    display: none;
-  }
+  // .login_con2_wrap{
+  //   display: none;
+  // }
 }
