--- a/css/login.scss
+++ b/css/login.scss
@@ -4,7 +4,7 @@ figure{font-size: 0;}
 
 
 .login_wrap{
-  width: 640px;
+  max-width: 640px;
   height: 100vh;
   margin: 0 auto;
   overflow: hidden;
