--- a/css/login.css
+++ b/css/login.css
@@ -134,8 +134,51 @@ figure {
   height: 100vh;
   width: 100%;
   position: absolute;
-  top: 30px;
+  top: 0;
+  padding-top: 50px;
 }
 .login_wrap .login_con2_wrap .con2_txt {
   display: flex;
+  max-width: 95%;
+  justify-content: center;
+  margin: auto;
+}
+.login_wrap .login_con2_wrap .con2_txt .combine {
+  display: flex;
+  flex-direction: column;
+}
+.login_wrap .login_con2_wrap .con2_txt .combine figure:nth-of-type(1) {
+  z-index: 1;
+  text-align: center;
+  position: relative;
+  top: 35px;
+}
+.login_wrap .login_con2_wrap .con2_txt .combine figure:nth-of-type(1) img {
+  width: 40%;
+  animation: 0.5s agumon linear 0s infinite alternate;
+  transform: translateY(0);
+}
+@keyframes agumon {
+  100% {
+    transform: translateY(10px);
+  }
+}
+.login_wrap .login_con2_wrap .con2_txt .combine figure:nth-of-type(2) {
+  position: relative;
+  bottom: 35px;
+  text-align: center;
+}
+.login_wrap .login_con2_wrap .con2_txt .combine figure:nth-of-type(2) img {
+  width: 90%;
+}
+.login_wrap .login_con2_wrap .con2_txt > figure img {
+  width: 100%;
+}
+.login_wrap .login_con2_wrap .con2_txt > figure p {
+  color: #fff;
+  font-size: 18px;
+  position: absolute;
+  top: 10.5%;
+  left: 48%;
+  text-shadow: 2px 2px 0px #346df8;
 }
