--- a/css/login.scss
+++ b/css/login.scss
@@ -130,10 +130,54 @@ figure{font-size: 0;}
     height: 100vh;
     width:100%;
     position: absolute;
-    top:30px;
+    top: 0;
+    padding-top: 50px;
     .con2_txt{
       display: flex;
-
+      max-width: 95%;
+      justify-content: center;
+      margin: auto;
+      .combine{
+        display: flex;
+        flex-direction: column;
+        figure{
+          &:nth-of-type(1){
+            z-index: 1;
+            text-align: center;
+            position: relative;
+            top: 35px;
+            img{
+              width:40%;
+              animation: .5s agumon linear 0s infinite alternate;
+              transform: translateY(0);
+              @keyframes agumon{
+                100%{transform: translateY(10px);}
+              }
+            }
+          }
+          &:nth-of-type(2){
+            position: relative;
+            bottom: 35px;
+            text-align:center;
+            img{
+              width:90%;
+            }
+          }
+        }
+      }
+      >figure{
+        img{
+          width:100%;
+        }
+        p{
+          color: #fff;
+          font-size: 18px;
+          position: absolute;
+          top: 10.5%;
+          left: 48%;
+          text-shadow: 2px 2px 0px #346df8;
+        }
+      }
     }
   }
 }
