--- a/css/login.scss
+++ b/css/login.scss
@@ -46,9 +46,10 @@ figure{font-size: 0;}
       flex-direction: column;
       .dot{
         position: relative;
-        left: 90px;
+        left: 80px;
+        text-align: center;
         img{
-          width: 70%;
+          width: 40%;
         }
       }
       .agumon{
@@ -96,31 +97,33 @@ figure{font-size: 0;}
           }
         }
       }
-      p{
+      .typing_txt{
+        display: none;
+      }
+      .typing{
         color:#fff;
         font-size: 22px;
         position: absolute;
         top: 32%;
         left: 12%;
         text-shadow:2px 2px 0px #346df8;
-        
-      }
-      .typing_txt{
-        display: none;
-      }
-      .typing{
-        display: inline-block; 
-        // animation: 0.3s typings infinite;
-        // @keyframes typings{ 
-        //   0%{border-right: 1px solid #fff} 
-        //   50%{border-right: 1px solid #000} 
-        //   100%{border-right: 1px solid #fff} 
-        // } 
-        &:nth-of-type(4){
-          position: absolute;
-          top:43%;
+        ul{
+          li{
+            display:block;
+          }
         }
       }
+      .typing ul li.on {  
+        display: inline-block; 
+        animation-name: cursor; 
+        animation-duration: 0.5s; 
+        animation-iteration-count: infinite;
+        @keyframes cursor{ 
+          0%{border-right: 1px solid #fff} 
+          50%{border-right: 1px solid #000} 
+          100%{border-right: 1px solid #fff} 
+        } 
+      } 
     }
   }
   .login_con2_wrap{
@@ -177,6 +180,48 @@ figure{font-size: 0;}
           left: 48%;
           text-shadow: 2px 2px 0px #346df8;
         }
+        .typing_txt2{
+          display: none;
+        }
+        .typing2{
+          display: inline-block; 
+          animation-name: cursor; 
+          animation-duration: 0.3s; 
+          animation-iteration-count: infinite;
+          @keyframes cursor{ 
+            0%{border-right: 1px solid #fff} 
+            50%{border-right: 1px solid #000} 
+            100%{border-right: 1px solid #fff} 
+          }
+        } 
+      }
+    }
+    .character{
+      max-width: 95%;
+      .swiper-wrapper{
+        text-align: center;
+      }
+      .swiper-button-next{
+        &::after{
+          content: none;
+        }
+      }
+      .swiper-button-prev{
+        &::after{
+          content: none;
+        }
+      }
+    }
+    .user_name{
+      position: relative;
+      figure{
+        text-align: center;
+      }
+      p{
+        color:#d9d9d9;
+        font-size: 24px;
+        position: absolute;
+        top: 0;
       }
     }
   }
