--- a/css/login.css
+++ b/css/login.css
@@ -185,6 +185,9 @@ figure {
 .login_wrap .login_con2_wrap .con2_txt .combine figure:nth-of-type(2) img {
   width: 90%;
 }
+.login_wrap .login_con2_wrap .con2_txt > figure {
+  position: relative;
+}
 .login_wrap .login_con2_wrap .con2_txt > figure img {
   width: 100%;
 }
@@ -192,8 +195,8 @@ figure {
   color: #fff;
   font-size: 18px;
   position: absolute;
-  top: 10.5%;
-  left: 48%;
+  top: 35%;
+  left: 15%;
   text-shadow: 2px 2px 0px #346df8;
 }
 .login_wrap .login_con2_wrap .con2_txt > figure .typing_txt2 {
@@ -238,5 +241,6 @@ figure {
   color: #d9d9d9;
   font-size: 24px;
   position: absolute;
-  top: 0;
+  top: 50%;
+  left: 10%;
 }
