--- a/app/pages/member/join/join.module.scss
+++ b/app/pages/member/join/join.module.scss
@@ -19,13 +19,11 @@
       background-repeat: no-repeat;
       mix-blend-mode: lighten;
       position: absolute;
-      top: 0;
+      top: 0px;
       object-fit: cover;
       .join_con1_wrap{
         width: 100%;
-        height: 100vh;
-        position: absolute;
-        top:0;
+        height: 100vh;overflow-y: auto;
         .con1{
           height: 100%;
           display: flex;
@@ -115,7 +113,8 @@
         width: 100%;
         height: 100vh;
         position: absolute;
-        top:0;
+        top:0;overflow-y: auto;
+        margin-bottom:30px;
         .con2_txt{
           display: flex;
           max-width: 95%;
@@ -247,7 +246,7 @@
       .join_con3_wrap{
         width: 100%;
         height: 100vh;
-        position: absolute;
+        position: absolute; overflow-y: auto;
         top:0;
         .con1{
           height: 100%;
@@ -256,7 +255,7 @@
           align-items: center;
           justify-content: center;
           position: relative;
-          bottom:50px;
+          bottom:80px;
           figure{
             font-size: 0;
           }
@@ -336,7 +335,7 @@
       .join_con4_wrap{
         width: 100%;
         height: 100vh;
-        position: absolute;
+        position: absolute;overflow-y: auto;
         top:0;
         .con1{
           height: 100%;
@@ -345,7 +344,7 @@
           align-items: center;
           justify-content: center;
           position: relative;
-          bottom:50px;
+          bottom:80px;
           figure{
             font-size: 0;
           }
@@ -425,7 +424,7 @@
       .join_con5_wrap{
         width: 100%;
         height: 100vh;
-        position: absolute;
+        position: absolute;overflow-y: auto;
         top:0;
         .capsule_wrap{
           display: flex;
@@ -546,7 +545,7 @@
       .join_con6_wrap{
         width: 100%;
         height: 100vh;
-        position: absolute;
+        position: absolute;overflow-y: auto;
         top:0;
         .con1{
           height: 100%;
