--- a/app/comp/dex/detail/modal.module.scss
+++ b/app/comp/dex/detail/modal.module.scss
@@ -50,15 +50,19 @@
                     border: 3px solid transparent;
                 }
             }
-            span {
+            .close {
                 position: absolute;
                 bottom: 36%;
-                width: 200px;
-                margin: 0 200px;
-                padding: 16px 0;
-                font-size: 18px;
+                width: 100%;
                 text-align: center;
-                cursor: pointer;
+                p {
+                    width: 200px;
+                    margin: 0 auto;
+                    padding: 16px 0;
+                    font-size: 18px;
+                    text-align: center;
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -134,15 +138,343 @@
                     border: 3px solid transparent;
                 }
             }
-            > p {
+            .close_btn {
                 position: absolute;
                 bottom: 26px;
-                width: 200px;
-                margin: 0 200px;
-                padding: 16px 0;
-                font-size: 18px;
-                text-align: center;
-                cursor: pointer;
+                > p {
+                    width: 200px;
+                    margin: 0 200px;
+                    padding: 16px 0;
+                    font-size: 18px;
+                    text-align: center;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 500px) and (max-width: 639px) {
+    .modal_page {
+        z-index: 10;
+        width: 100%;
+        height: 100vh;
+        color: white;
+        position: absolute;
+        left: 0;
+        top: 0;
+        .modal_p {
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.7);
+            position: relative;
+            .modal {
+                background-image: url("/img/detail/modal.png");
+                background-repeat: no-repeat;
+                background-size: 90% 60%;
+                text-shadow: 2px 1px 0 #1f93ff;
+                margin: 0 20px;
+                position: absolute;
+                top: 20%;
+                width: 100%;
+                height: 750px;
+                div {
+                    width: 90%;
+                    h3 {
+                        padding: 32px 0;
+                        font-size: 22px;
+                        text-align: center;
+                    }
+                    div {
+                        width: 100%;
+                        height: 310px;
+                        margin: 0 auto;
+                        p {
+                            padding-right: 20px;
+                            width: 78%;
+                            margin: 0 auto;
+                            height: 90%;
+                            line-height: 30px;
+                            overflow: scroll;
+                            overflow-x: hidden;
+                        }
+                    }
+                    p::-webkit-scrollbar {
+                        width: 10px;
+                        background-color: transparent;
+                        border: 1px solid #00f3ff;
+                    }
+                    p::-webkit-scrollbar-thumb {
+                        background-color: #00f3ff;
+                        background-clip: padding-box;
+                        border: 3px solid transparent;
+                    }
+                }
+                .close {
+                    position: absolute;
+                    bottom: 42%;
+                    width: 90%;
+                    p {
+                        display: inline-block;
+                        width: 130px;
+                        padding: 16px 0;
+                        font-size: 18px;
+                        text-align: center;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+
+    .modal_page_skill {
+        z-index: 10;
+        width: 100%;
+        height: 100vh;
+        color: white;
+        position: absolute;
+        left: 0;
+        top: 0;
+        .modal_p {
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.7);
+            position: relative;
+            .modal {
+                background-image: url(/img/detail/modal_skill.png);
+                background-repeat: no-repeat;
+                background-size: 100% 90%;
+                text-shadow: 2px 1px 0 #1f93ff;
+                margin: auto;
+                position: absolute;
+                top: 4%;
+                width: 100%;
+                .more {
+                    width: 90%;
+                    margin: 0 auto;
+                    h3 {
+                        padding: 32px 0;
+                        font-size: 22px;
+                        text-align: center;
+                    }
+                    .skill_list {
+                        width: 90%;
+                        height: 50vh;
+                        margin: 20px auto;
+                        overflow: scroll;
+                        overflow-x: hidden;
+                        li {
+                            > p {
+                                display: flex;
+                                align-items: center;
+                                gap: 16px;
+                                font-size: 22px;
+                                padding: 10px 0;
+                                cursor: pointer;
+                                &::before {
+                                    content: "●";
+                                    font-size: 8px;
+                                    text-shadow: 2px 1px 0 #1f93ff;
+                                }
+                            }
+                            .skill_description {
+                                display: none;
+                                width: 400px;
+                                height: auto;
+                                padding: 6px 0 6px 36px;
+                                font-size: 18px;
+                                > span {
+                                }
+                            }
+                        }
+                    }
+                    ul::-webkit-scrollbar {
+                        width: 10px;
+                        background-color: transparent;
+                        border: 1px solid #00f3ff;
+                    }
+                    ul::-webkit-scrollbar-thumb {
+                        background-color: #00f3ff;
+                        background-clip: padding-box;
+                        border: 3px solid transparent;
+                    }
+                }
+                .close_btn {
+                    width: 100%;
+                    position: absolute;
+                    bottom: 88px;
+                    text-align: center;
+                    margin: 0 auto;
+                    > p {
+                        width: 200px;
+                        margin: 0 auto;
+                        padding: 16px 0;
+                        font-size: 18px;
+                        text-align: center;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 360px) and (max-width: 499px) {
+    .modal_page {
+        z-index: 10;
+        width: 100%;
+        height: 100vh;
+        color: white;
+        position: absolute;
+        left: 0;
+        top: 0;
+        .modal_p {
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.7);
+            position: relative;
+            .modal {
+                background-image: url("/img/detail/modal.png");
+                background-repeat: no-repeat;
+                background-size: 90% 60%;
+                text-shadow: 2px 1px 0 #1f93ff;
+                margin: 0 20px;
+                position: absolute;
+                top: 20%;
+                width: 100%;
+                height: 750px;
+                div {
+                    width: 90%;
+                    h3 {
+                        padding: 32px 0;
+                        font-size: 22px;
+                        text-align: center;
+                    }
+                    div {
+                        width: 100%;
+                        height: 310px;
+                        margin: 0 auto;
+                        p {
+                            padding-right: 20px;
+                            width: 78%;
+                            margin: 0 auto;
+                            height: 90%;
+                            line-height: 30px;
+                            overflow: scroll;
+                            overflow-x: hidden;
+                        }
+                    }
+                    p::-webkit-scrollbar {
+                        width: 10px;
+                        background-color: transparent;
+                        border: 1px solid #00f3ff;
+                    }
+                    p::-webkit-scrollbar-thumb {
+                        background-color: #00f3ff;
+                        background-clip: padding-box;
+                        border: 3px solid transparent;
+                    }
+                }
+                .close {
+                    position: absolute;
+                    bottom: 42%;
+                    width: 90%;
+                    p {
+                        width: 200px;
+                        margin: 0 auto;
+                        padding: 16px 0;
+                        font-size: 18px;
+                        text-align: center;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+
+    .modal_page_skill {
+        z-index: 10;
+        width: 100%;
+        height: 100vh;
+        color: white;
+        position: absolute;
+        left: 0;
+        top: 0;
+        .modal_p {
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.7);
+            position: relative;
+            .modal {
+                background-image: url(/img/detail/modal_skill.png);
+                background-repeat: no-repeat;
+                background-size: 100% 90%;
+                text-shadow: 2px 1px 0 #1f93ff;
+                margin: auto;
+                position: absolute;
+                top: 4%;
+                width: 100%;
+                .more {
+                    width: 90%;
+                    margin: 0 auto;
+                    h3 {
+                        padding: 32px 0;
+                        font-size: 22px;
+                        text-align: center;
+                    }
+                    .skill_list {
+                        width: 90%;
+                        height: 50vh;
+                        margin: 20px auto;
+                        overflow: scroll;
+                        overflow-x: hidden;
+                        li {
+                            > p {
+                                display: flex;
+                                align-items: center;
+                                gap: 16px;
+                                font-size: 22px;
+                                padding: 10px 0;
+                                cursor: pointer;
+                                &::before {
+                                    content: "●";
+                                    font-size: 8px;
+                                    text-shadow: 2px 1px 0 #1f93ff;
+                                }
+                            }
+                            .skill_description {
+                                display: none;
+                                width: 90%;
+                                height: auto;
+                                padding: 6px 0 6px 36px;
+                                font-size: 18px;
+                                > span {
+                                }
+                            }
+                        }
+                    }
+                    ul::-webkit-scrollbar {
+                        width: 10px;
+                        background-color: transparent;
+                        border: 1px solid #00f3ff;
+                    }
+                    ul::-webkit-scrollbar-thumb {
+                        background-color: #00f3ff;
+                        background-clip: padding-box;
+                        border: 3px solid transparent;
+                    }
+                }
+                .close_btn {
+                    width: 100%;
+                    position: absolute;
+                    bottom: 88px;
+                    text-align: center;
+                    margin: 0 auto;
+                    > p {
+                        width: 200px;
+                        margin: 0 auto;
+                        padding: 16px 0;
+                        font-size: 18px;
+                        text-align: center;
+                        cursor: pointer;
+                    }
+                }
             }
         }
     }
