--- a/app/pages/borad/list/page.module.scss
+++ b/app/pages/borad/list/page.module.scss
@@ -21,10 +21,12 @@
 .board_list{
     width: 100%;
     
-    background-image: url('../../../../public/img/board/write/bg_board.png');
+    background-image: url('/img/board/write/bg_board.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgb(0, 0, 0,40);
+
+    padding-bottom: 200px;
     header{
         padding: 5%;
         @include flex(space-around,){align-items: flex-start;};
@@ -37,7 +39,6 @@
             position: relative;
             .pfDecoBox{
                 position: absolute; top:0; left: 0;
-                z-index: 2;
             }
             .pfInner{
                 position:relative;
@@ -58,7 +59,6 @@
                 .pfNickname{
                     position: absolute; top: -25%; left: 35%;
                     @include flex( );
-                    img{}
                     figcaption{
                         color: #FFF;
                         text-shadow: 2px 1px 0px #1F93FF;
@@ -70,17 +70,15 @@
                     }
                 }
                 .pfPictureWrap{
-                    position: absolute; top: 5%; right: 8.5%;
+                    width: 65px; height: 65px;
+                    position: absolute; top: -80%; right: 6.5%;
                     .pfPicture{
+                        width: 100%;
                         position: relative;
                         margin-right: 30px;
-                        .pfPicDeco{
-                            position: absolute; top:0; left: 0;
-                            transform: translate(-50%,-50%);
-                        }
                         .pfPic{
                             position: absolute; top:0; left: 0;
-                            transform: translate(-50%,-50%);
+                            width: 100%;
                         }
                     }
                 }
@@ -113,21 +111,45 @@
                 text-transform: uppercase;
             }
         }
+        a{
+            width: 40%; 
+            .newDrawTab{
+                position: relative;
+                width: 100%; height: 100%;
+                .newDrawDeco{width: 100%; cursor: pointer;}
+                h2{
+                    position: absolute; top:35%; right: 20%;
+    
+                    color: #FFF;
+                    text-shadow: 2px 1px 0px #1F93FF;
+                    text-align: center;
+    
+                    font-family: NeoDunggeunmo;
+                    font-size: 22px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: normal;
+                    letter-spacing: -0.44px;
+                    text-transform: uppercase;
+                }
+            }
+        }
     }
     
     .DMList{
         .digimonList{
-            width: 100%; height: 50vh;
+            width: 100%; 
             
             @include flex(center,center){flex-wrap: wrap};
-            padding: 5%;
             .eachDigimon{
-                width: 30%;
+                width: 45%;
                 @include flex(center,center){flex-direction: column};
+                position: relative; 
+                padding: 3% 0;
                 cursor: pointer;
                 .cageWhole{
                     position: relative;
-                    .cage{width: 207px;}
+                    .cage{width: 250px;}
                     .mon{
                         position: absolute; top: 12%; left :0; right:0; margin:0 auto;
                         width: 120px; height: 133px;
@@ -138,33 +160,47 @@
                     }
                 }
                 .nameWhole{
-                    transform: translate(0,-180%);
-                    position: relative;
-                    .namePlate{width: 153px;}
-                    .nameInner{
-                        transform: translate(0,0%);
+                    position: absolute; bottom: 25%;
+                    .nameWrap{
                         position: relative;
-                        .smallFace{
-                            width: 18px; height: 18px;
-                            position: absolute; top: 0%; left :0;
-                        }
-                        .iconNameLine{
-                            position: absolute; top: 50%; left :0; right:0; margin:0 auto;
-                            @include flex(center,center){};
-                            .name{ 
-                                font-size: 16px;
-                                text-shadow: 2px 1px 0px #1F93FF;
+                        .namePlate{width: 200px;}
+                        .nameInner{
+                            width: 190px;
+                            position: absolute; top: 22%; left: -3%;
+                            @include flex(space-around,center){};
+                            .smallFace{
+                                width: 35px; height: 35px;
+                                transform: translate(45%,25%);
                             }
-                            img{width: 10px;}
-                        }
-                        .fromWho{
-                            position: absolute; bottom: 0%; right:0;
+                            .textwrap{
+                                width: 90%;
+                                @include flex(normal,normal){flex-direction: column};
+                                .iconNameLine{
+                                    @include flex(center,center){};
+                                    text-align: left;
+                                    .name{ 
+                                        font-size: 18px; word-break:keep-all;
+                                        text-shadow: 2px 1px 0px #1F93FF;
+                                        
+                                    }
+                                    img{width: 18px;}
+                                }
+                                .fromWho{
+                                    text-align: right;
+                                    font-size: 16px;
+                                    word-break:keep-all;padding: 10px 0 0 0;
+                                }
+                            }
                         }
                     }
-                    
                 }
             }
-        }}
+        }
+        .moreBtn{
+            width: 230px;
+            margin: 100px auto 0 auto;
+        }
+    }
 
 }
 
@@ -191,12 +227,51 @@
                     img{width: 20px;}
                     figcaption{font-size: 18px !important;}
                 }
+                .pfPictureWrap{
+                    .pfPicture{
+                        .pfPic{
+                            left: 12% !important;
+                            width: 90% !important; 
+                        }
+                    }
+                }
             }
         }
         .title{
             .titleTab{
                 .titleDeco{width: 90%;}
-                h1{font-size: 16px; left: 18%;}
+                h1{font-size: 15px; left: 18%;}
+            }
+            a{
+                .newDrawTab{
+                    .newDrawDeco{width: 90%;}
+                    h2{font-size: 16px; right: 23%;}
+                }
+            }
+        }
+        .DMList{
+            .digimonList{
+                .eachDigimon{
+                    .cageWhole{
+                        .cage{width: 225px;}
+                        .mon{width: 108px; height: 119.7px;}
+                    }
+                    .nameWhole{
+                        .nameWrap{
+                            .namePlate{width: 180px;}
+                            .nameInner{
+                                width: 171px;
+                                .smallFace{
+                                    transform: translate(40%,10%);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .moreBtn{
+                width: 230px;
+                margin: 100px auto 0 auto;
             }
         }
     }
@@ -217,12 +292,59 @@
                     img{width: 20px !important;}
                     figcaption{font-size: 16px !important;}
                 }
+                .pfPictureWrap{
+                    .pfPicture{
+                        .pfPic{
+                            left: 20% !important;
+                            width: 80% !important; 
+                        }
+                    }
+                }
             }
         }
         .title{
             .titleTab{
                 .titleDeco{width: 90%;}
                 h1{font-size: 12px; left: 16%;}
+            }
+            a{
+                .newDrawTab{
+                    .newDrawDeco{width: 90%;}
+                    h2{font-size: 13px; right: 23%;}
+                }
+            }
+        }
+        .DMList{
+            .digimonList{
+                .eachDigimon{
+                    .cageWhole{
+                        .cage{width: 170px;}
+                        .mon{width: 81.6px; height: 90.44px;}
+                    }
+                    .nameWhole{
+                        .nameWrap{
+                            .namePlate{width: 136px;}
+                            .nameInner{
+                                width: 129.2px;
+                                .smallFace{
+                                    width: 23.8px; height: 23.8px;
+                                    transform: translate(45%,-10%);
+                                }
+                                .textwrap{
+                                    transform: translate(0,-15%);
+                                    .iconNameLine{
+                                        .name{font-size: 14px;}
+                                    }
+                                    .fromWho{font-size: 14px;}
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .moreBtn{
+                width: 230px;
+                margin: 100px auto 0 auto;
             }
         }
     }
