--- a/app/pages/member/mypage/page.module.scss
+++ b/app/pages/member/mypage/page.module.scss
@@ -75,10 +75,11 @@
         outline: none;
         background: transparent;
         color: white;
-        width: 140px;
+        width: 330px;
         margin-left: 20px;
         height: 30px;
         font-size: 25px;
+        text-align: center;
         font-family: 'neodgm_code';
       }
 
@@ -96,7 +97,9 @@
     }
 
     .modal_bg {
-
+      display: flex;
+      justify-content: center;
+      align-items: center;
       position: fixed;
       max-width: 640px;
       width: 100%;
@@ -114,9 +117,9 @@
         align-items: center;
         gap: 10px;
         padding: 80px 60px 60px 60px;
-/*         margin-top: 200px; */
+        /*         margin-top: 200px; */
 
-        > figure {
+        >figure {
           img {
             width: 100px;
             height: 100px;
@@ -185,41 +188,83 @@
   }
 }
 
-@media (max-width: 480px) {
-  
-  .bg_img{
-    .pro{
-      .pro_title{
-        :nth-child(2){width: 230px;}
+.alert_modal {
+  position: fixed;
+  width: 100%;
+  .alert_warning {
+    max-width: 640px;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
+    >img {
+      width: 100%;
+    }
+    .alert_text {
+      position: absolute;
+      text-align: center;
+      p {
+        margin-bottom: 50px;
+        text-align: center;
+        font-size: 20px;
       }
+      .alert_btn {
+        width: 80%;
+      }
+    }
+  }
+}
+
+
+
+@media (max-width: 480px) {
+
+  .bg_img {
+    .pro {
+      .pro_title {
+        :nth-child(2) {
+          width: 230px;
+        }
+      }
+
       .pro_view_bg {
-          .pro_view{
-            .pro_img{
-                width: 150px;
+        .pro_view {
+          .pro_img {
+            width: 150px;
+          }
+
+          .pro_view_form {
+            top: 410px;
+
+            .text_box {
+              width: 60%;
+              font-size: 1.1rem;
             }
-            .pro_view_form {
-              top: 430px;
-              .text_box {
-                width: 170px;
-                font-size: 20px;
-              }
-              img {
-                width: 25px;
-              }
+
+            img {
+              width: 25px;
             }
-            .modal_bg {
-              .modal_p {
-                gap: 10px;
-                padding: 48px;
-/*                 margin-top: 150px; */
-                > figure {
-                  img {
-                    width: 70px;
-                    height: 70px;
-                  }
+          }
+
+          .modal_bg {
+            .modal_p {
+              gap: 10px;
+              padding: 48px;
+              margin-top: 100px;
+
+              >figure {
+                img {
+                  width: 70px;
+                  height: 70px;
                 }
               }
             }
+          }
         }
       }
     }
@@ -231,21 +276,116 @@
         }
       }
     }
-    
+
     .last_btn {
       margin: 20px 20px 150px;
       display: flex;
       flex-direction: column;
+
       img {
         width: 200px;
         object-fit: cover;
       }
+
       .btn_ani {
-        img{
+        img {
           display: none;
+        }
+      }
+    }
+
+
+    .alert_modal {
+      img {
+        width: 100%;
+      }
+
+      .alert_warning {
+        width: 100%;
+
+        p {
+          font-size: 0.9rem;
+          margin-bottom: 30px;
+        }
+
+        .alert_btn {
+          width: 50%;
+        }
+      }
+    }
+  }
+
+}
+
+@media (max-width: 360px) {
+  .bg_img {
+    .pro {
+      .pro_view_bg {
+        .pro_view {
+          .pro_img {
+            width: 120px;
+          }
+
+          .pro_view_form {
+            top: 375px;
+          }
+
+          .modal_bg {
+            .modal_p {
+              gap: 10px;
+              padding: 48px;
+              margin-top: 100px;
+
+              >figure {
+                img {
+                  width: 70px;
+                  height: 70px;
+                }
+              }
+            }
           }
         }
       }
+    }
+
+    .capsule {
+      figure {
+        img {
+          width: 100px;
+        }
+      }
+    }
+
+    .last_btn {
+      margin: 20px 20px 150px;
+      display: flex;
+      flex-direction: column;
+
+      img {
+        width: 200px;
+        object-fit: cover;
+      }
+
+      .btn_ani {
+        img {
+          display: none;
+        }
+      }
+    }
+
+    .alert_modal {
+      .alert_warning {
+        width: 100%;
+
+        p {
+          font-size: 0.8rem;
+          margin-bottom: 30px;
+        }
+
+        .alert_btn {
+          width: 50%;
+        }
+      }
+    }
   }
 }
-
