--- a/app/pages/rank/rank.module.scss
+++ b/app/pages/rank/rank.module.scss
@@ -113,6 +113,14 @@
               justify-content: center;
               >figure{
                 font-size: 0;
+                img {
+                  animation: bounce 2s infinite linear;
+                }
+                @keyframes bounce {
+                  0% { transform: translateY(0) }
+                  50% { transform: translateY(10%)  }
+                  100% { transform: translateY(0)  }
+                }
               }
             }
             .best_bg3{
@@ -222,7 +230,7 @@
           .list_name{
             display: flex;
             align-items: center;
-            margin-right: 145px;
+            margin-right: 130px;
             >figure{
               font-size: 0;
               margin-right: 5px;
