--- a/app/pages/member/join/join.module.scss
+++ b/app/pages/member/join/join.module.scss
@@ -113,7 +113,7 @@
         width: 100%;
         height: 100vh;
         position: absolute;
-        top:0;overflow-y: auto;
+        top:0;
         margin-bottom:30px;
         .con2_txt{
           display: flex;
@@ -632,6 +632,39 @@
         }
       }
     }
+    .alert_modal {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      .alert_warning {
+        max-width: 640px;
+        width: 100%;
+  
+        height: 100vh;
+        left: 0;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.9);
+        >img {
+          width: 100%;
+        }
+        .alert_text {
+          position: absolute;
+          text-align: center;
+          p {
+            margin-bottom: 50px;
+            text-align: center;
+            font-size: 20px;
+          }
+          .alert_btn {
+            width: 70%;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -870,6 +903,20 @@
                   font-size: 13px;
                 }
               }
+            }
+          }
+        }
+      }
+      .alert_modal {
+        .alert_warning {
+          .alert_text {
+            text-align: center;
+            p {
+              margin-bottom: 30px;
+              font-size: 1rem;
+            }
+            .alert_btn {
+              width: 60%;
             }
           }
         }
